# BMSTU_CS_Sudoku_2025

./: CMakeLists.txt  README.md  hello.cpp  main.cpp
menuWindow/: CMakeLists.txt  menuWindow.cpp  menuWindow.hpp
sources/: Data.txt  game.cpp  game.h  game.hpp  main.cpp
sudokuLib/: CMakeLists.txt  sudokuLib.cpp  sudokuLib.h  sudokuLib.hpp
window/: CMakeLists.txt  window.cpp  window.hpp
